--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">zentro</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCXHsPT450-AosY7dvzi5gUT_geYSpI34o</string>
+    <string name="facebook_app_id">625209123157341</string>
+     <string name="facebook_client_token">56789</string>
 </resources>
